refactor: restructure test files and add builtin recorders tests
- Renamed test files for better clarity and organization.
- Added new tests for builtin recorders to enhance test coverage.

--- a/demos/demo/config.yaml
+++ b/demos/demo/config.yaml
@@ -1,13 +1,17 @@
 "**/*.txt":
   processors:
     - backup_file
+    - record_to_shared
   config:
     backup_dir: demo/backups
 
 "**/rename_me/*.txt":
   processors:
     - rename_file
+    - record_to_shared
 
 ".":
   pre_processors:
     - set_path_name_dict
+  post_processors:
+    - persist_history_sqlite
