fix(file_ops): add file operations processor
- Added a new processor for file operations in processors/file_ops.py
- Updated __init__.py to include the new file_ops processor
- Updated test cases to cover the new file operations processor

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,8 @@
   "python.testing.pytestArgs": ["${workspaceFolder}/test"],
   "python.testing.unittestEnabled": false,
   "python.testing.nosetestsEnabled": false,
-  "python.testing.autoTestDiscoverOnSaveEnabled": true
+  "python.testing.autoTestDiscoverOnSaveEnabled": true,
+  "python.defaultInterpreterPath": "D:\\miniconda\\envs\\gflow_env\\python.exe",
+  "python.terminal.activateEnvironment": true,
+  "git.path": "C:\\Program Files\\Git\\cmd\\git.exe"
 }
