--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,5 @@
 [pytest]
+# Search recursively under the `test` directory for test files.
 minversion = 6.0
 addopts = -ra -q
 python_files = test_*.py *_test.py
